# REACT

./: .gitignore  LICENSE  README.md
Controller/src/: .gitignore  readme.md
Controller/src/so3_control/: CMakeLists.txt
Controller/src/so3_control/include/so3_control/: NetworkControl.h
Controller/src/so3_control/launch/: controller_network.launch
Controller/src/so3_control/logger/: log_plot.py
Controller/src/so3_control/src/: NetworkControl.cpp  control_example.cpp
Controller/src/so3_quadrotor_simulator/: CMakeLists.txt
REACT_MATH_Derivations/: 01_collision_loss_saturation.tex  01_collision_loss_saturation_cn.tex  02_multi_waypoint_extension.tex  02_multi_waypoint_extension_cn.tex  03_esdf_time_replacement.tex  03_esdf_time_replacement_cn.tex  04_stage5_deployment_math.tex  04_stage5_deployment_math_cn.tex  05_closedloop_dynamics.tex  05_closedloop_dynamics_cn.tex  README.md
Simulator/src/: CMakeLists.txt  readme.md  rviz.rviz
Simulator/src/config/: config.yaml  config_dynamic.yaml
Simulator/src/include/: maps.hpp  sensor_simulator.cuh  sensor_simulator.h
Simulator/src/src/: dataset_generator.cpp  maps.cpp  sensor_simulator.cpp  sensor_simulator.cu  test_dyn_sphere.cpp  test_simulator_cuda.cpp
YOPO/: readme.md  test_yopo_ros.py
YOPO/config/: traj_opt.yaml
YOPO/loss/: guidance_loss.py  kinodynamic_loss.py  loss_function.py  motion_reshaped_esdf.py  safety_loss.py  smoothness_loss.py
YOPO/policy/: yopo_dataset.py  yopo_network.py  yopo_trainer.py
YOPO/policy/models/: dynamic_attention.py  gru_decoder.py  revae.py  temporal_aggregator.py  temporal_selector.py
YOPO/policy/utils/: frame_buffer.py
YOPO/saved/YOPO_1/: events.out.tfevents.1763990916.610.3199703.0
docs/: ARCHITECTURE.md  ARCHITECTURE_cn.md  paper_outline.md  paper_outline_cn.md  stage_3_4_design.md  stage_3_4_design_cn.md  stage_3_4_research.md  stage_3_4_research_cn.md  stage_5_design.md  stage_5_design_cn.md  stage_5_latency.md  stage_5_latency_cn.md  stage_5_sr.md  stage_5_sr_cn.md
hardware/: carbon_bottom_plate.STEP  carbon_main_frame.STEP
results/: _smoke_3sc.csv  ablation.csv  ablation_5k.csv  ablation_stage_3_4.csv  ablation_stage_3_4_v3.csv  stage5_latency_baseline.csv  stage5_sr_C1_FT_realsim_pass2.csv  stage5_sr_C1_pass1.csv  stage5_sr_C1_v2_pass1.csv  stage5_sr_C1_v2_pass2.csv  stage5_sr_C1_v2_realsim_pass1.csv  stage5_sr_C1_v2_realsim_pass2.csv  stage5_sr_C1_v3_hack.csv  stage5_sr_C1_v4_FT_balanced_realsim_pass2.csv  stage5_sr_C1_v4_FT_realsim_pass1.csv  stage5_sr_C1_v4_FT_realsim_pass2.csv  stage5_sr_baseline.csv  stage5_sr_baseline_v2_hack.csv  stage5_sr_baseline_v3_realsim.csv  stage5_sr_baseline_v3_realsim_nofilter_pass2.csv  stage5_sr_baseline_v3_realsim_pass2.csv
scripts/: extract_tb.py  preflight.sh  run_one_epoch.py  run_stage3_1k.py  run_stage4_ablation.py  smoke_stage1.py  smoke_stage1_integration.py  smoke_stage1_train.py  smoke_stage2_2e.py  smoke_stage3_2a.py  smoke_stage3_2b.py  smoke_stage3_2c.py  smoke_stage3_4a.py  smoke_stage3_4b.py  smoke_stage3_4c.py  smoke_stage3_c3.py  smoke_stage3_losses.py  stage5_closedloop_eval.py  stage5_gen_scenarios.py  stage5_latency_baseline.py  stage5_smoke_dyn_publisher.py  train_stage_3_1.py  train_stage_3_1_ft.py  train_stage_3_1_ft_balanced.py  train_stage_3_1_v2.py
tools/: verify_dynamic_render.py
tools/eval_scenarios/v3_dyn_100/: scenario_000.yaml  scenario_001.yaml  scenario_002.yaml  scenario_003.yaml  scenario_004.yaml  scenario_005.yaml  scenario_006.yaml  scenario_007.yaml  scenario_008.yaml  scenario_009.yaml  scenario_010.yaml  scenario_011.yaml  scenario_012.yaml  scenario_013.yaml  scenario_014.yaml  scenario_015.yaml  scenario_016.yaml  scenario_017.yaml  scenario_018.yaml  scenario_019.yaml  scenario_020.yaml  scenario_021.yaml  scenario_022.yaml  scenario_023.yaml  scenario_024.yaml  scenario_025.yaml  scenario_026.yaml  scenario_027.yaml  scenario_028.yaml  scenario_029.yaml  scenario_030.yaml  scenario_031.yaml  scenario_032.yaml  scenario_033.yaml  scenario_034.yaml  scenario_035.yaml  scenario_036.yaml  (+63 more)
(+4 files in other folders)
